--- a/Introduction.tex
+++ b/Introduction.tex
@@ -4,16 +4,16 @@ This thesis is concerned with the application of formal methods within the Railw
 
 \section{Motivation}
 
-A major problem facing those who design and develop computer systems today is  that of designing and implementing such systems correctly. The answer to this problem is more elusive than it may seem initially due to the underlying complexity of modern systems. The process of checking that a system meets its specification is called \emph{verification}. In industry the most widely used means to verify both hardware and software systems is testing. This checks that for a given input the output of the system is correct with regards to the specification. The biggest downfall of testing is that it is typically used in a \emph{non-exhaustive} manor, due to the fact that most modern systems have a large number of inputs and testing each possible combination is not feasible. This problem is further compounded when several systems are operating in paralell and communicating with each other.
+A major problem facing those who design and develop computer systems today is  that of designing and implementing such systems correctly. The answer to this problem is more elusive than it may seem initially due to the underlying complexity of modern systems. The process of checking that a system meets its specification is called \emph{verification}. In industry the most widely used means to verify both hardware and software systems is testing. This checks that for a given input the output of the system is correct with regards to the specification. The biggest downfall of testing is that it is typically used in a \emph{non-exhaustive} manner, due to the fact that most modern systems have a large number of inputs which makes testing each possible combination is not feasible. This problem is further compounded when several systems are operating in parallel and communicating with each other.
 
-One of the most famous and costly errors to ocurr was that of the Ariane 5 flight 501\cite{GL97}. A 64-bit floating point number representing horizontal velocity was converted into an 16-bit signed integer resulting in an overflow and a hardware exception being raised. The control system interpreted the hardware exception as position and velocity data which lead it to fly on a self destructive trajectory. Another example of a flawed computer system is "Chip and PIN" smart cards secured by the EMV protocol \cite{JM10}. It is supposed to be the case that only someone with the 4 digit personal identification number (PIN) can make payments with the cards, however it is possible for a fraudster to perform a man-in-the-middle attack and to trick the terminal into believing the PIN was correctly entered when no PIN was entered at all. With over 730 million smart cards in circulation this posses a significant threat the to security of many peoples finances. Both of these problems were avoidable. In the case of the Ariane rocket all that would have been required was an extra line of code or two to prevent the variable over-flowing. Many other variables in the code had been protected against over-flow in this way, it was simply over looked in the case of this particular variable.
+One of the most famous and costly errors to occur was that of the Ariane 5 flight 501\cite{GL97}. A 64-bit floating point number representing horizontal velocity was converted into an 16-bit signed integer resulting in an overflow and a hardware exception being raised. The control system interpreted the hardware exception as position and velocity data which lead it to fly on a self destructive trajectory. Another example of a flawed computer system is "Chip and PIN" smart cards secured by the EMV protocol \cite{JM10}. It is supposed to be the case that only someone with the 4 digit personal identification number (PIN) can make payments with the cards, however it is possible for a fraudster to perform a man-in-the-middle attack and to trick the terminal into believing the PIN was correctly entered when no PIN was entered at all. With over 730 million smart cards in circulation this posses a significant threat the to security of many peoples finances. Both of these problems were avoidable. In the case of the Ariane rocket all that would have been required was an extra line of code or two to prevent the variable over-flowing. Many other variables in the code had been protected against over-flow in this way, it was simply over looked in the case of this particular variable.
 
 
-Formal methods are a group of approaches that capture certain aspects of the development process with a logical and mathematical basis. This thesis is mostly concerned with \emph{formal verification}, which uses logic and formal reasoning to prove that a program meets its specification, and formal specification which attempts to capture the behaviour of the program in a logic or language with a logical underpinning. The advantage of using formal verification in combination with formal specification is that one can prove that a system satisfies its specification for all inputs in an \emph{exhaustive} manor. These formal methods however do not make testing redundant, for example, would you rather fly a plane that has been formally verified and never tested or a plane that has been heavily tested but not verified. Another problem is that manual formal verification requires a large amount of technical ability to perform and in addition time consuming. There are a number of automatic verification techniques, however these are typically not complete in the sense that they are not guarateed to produce an output for every possible input. One area that automatic techniques do perform well in is verifying large but logically uncomplex systems, which do occur in industry. It is also beneficial if these systems are part of a product line, if that is the case then a customised verification approach may be developed that exploits similarities between individual implementations of the system.
+Formal methods are a group of approaches that capture certain aspects of the development process with a logical and mathematical basis. This thesis is mostly concerned with \emph{formal verification}, which uses logic and formal reasoning to prove that a program meets its specification, and \emph{formal specification} which attempts to capture the behaviour of the program in a logic or language with a logical underpinning. The advantage of using formal verification in combination with formal specification is that one can prove that a system satisfies its specification for all inputs in an \emph{exhaustive} manner. These formal methods however do not make testing redundant, for example, e.g. would you rather fly a plane that has been formally verified and never tested or a plane that has been heavily tested but not verified? Another problem is that manual formal verification requires a large amount of technical ability to perform and is in addition time consuming. There are a number of automatic verification techniques, however these are typically not complete in the sense that they are not guaranteed to produce an output for every possible input. One area that automatic techniques do perform well in is verifying large but logically un-complex systems, which do occur in industry. It is also beneficial if these systems are part of a product line, if that is the case, then a customised verification approach may be developed that exploits similarities between individual implementations of the system.
 
-One such automatic verification technique is SAT based model checking which attempts to exhaustively search the state space of the system and check that a safety property holds in each individual state. This is done by formulating the model checking problem as a boolean satisfaction problem and then applying a SAT solver to do the search. These SAT solvers have the advantage that they are highly optimised and are typically faster at solving any boolean satisfaction problem, without any problem specific customisation, than any proprietary software. The low level and complex nature of many SAT solver optimisations also makes it harder to reason about the solver's correctness. This causes a probem when such solvers are used in a safety critical environment where their results must be trustworthy. Besides the correctness also
+One such automatic verification technique is \emph{model checking} which attempts to exhaustively search the state space of the system and check that a safety property holds in each individual state. This can be done by formulating the model checking problem as a boolean satisfaction problem and then applying a SAT solver to do the search. These SAT solvers have the advantage that they are highly optimised and are typically faster at solving any boolean satisfaction problem, without any problem specific customisation, than any proprietary software. The low level and complex nature of many SAT solver optimisations also makes it harder to reason about the solver's correctness. This causes a problem when such solvers are used in a safety critical environment where their results must be trustworthy. Besides the correctness also
 totality (or universality) of SAT solvers is an issue. For example, in the 2012 SAT competition (www.smtcomp.org) many systems were not total in the sense that they returned
-"Unknown" for certain inputs signifying that they could not deal with the given problem. 
+"Unknown" for certain inputs signifying that they could not deal with the given problem.  There are also numerous specialised model checking algorithms, each of which, is geared towards solving a specific type of problem and comes with their own unique optimisations.
 
 
 Another approach to formal verification is that of interactive theorem proving where a tool aids with the human driven construction of a formal proof of correctness for a system. These have the advantage that the machine can check the human produced proof and they typically include a number of built in tactics that in the construction of a proof. Some interactive theorem provers realise the Curry-Howard correspondence \cite{HC34, HC58, WH80} which states that constructive proofs performed using the natural deduction calculus can be viewed as programs in the lambda calculus.  The process of exploiting this correspondence to produce a program from a proof is called program extraction. This technique allows for the development of programs that are correct by construction as the program comes with a proof that certifies its correctness. The Minlog theorem prover comes with a number specialisations for the purpose of extracting programs from formal proofs.
@@ -24,7 +24,7 @@ Program extraction is another verification technique which allows the production
 \end{comment}
 
 
-The Railway Verification Group at the Computer Science Department of Swansea University has been researching the development of formal methods for use in real world situations in particular for the development of train control systems. The majority of this work has been in the form of an industrial collaboration with our partner Siemens Rail Automation (UK). Siemens are continously modernising and improving their development processes and as a part of this are looking to use formal methods for the development of their systems. The Westrace interlocking is one such system that is being considered for treatment by formal methods. These interlockings have the benefits of being large but relatively uncomplex and every interlocking developed has to comply to the same range of safety requirements.  We have developed a Another product currently under development by Siemens Rail Automation is the European Rail Traffic Management System. This developed to a European  standard with each country or individual company producing their own implementation. Since the specification is loose and allows for a wide range for implementations this makes modelling of the system desireable to understand possible behaviours and to ensure safe integration with existing infrastructure. Furthermore, it is an open field  when it comes to substantiating the claim that the ERTMS approach offers a higher performance of the railway compared to the traditional control systems.
+The Railway Verification Group at the Computer Science Department of Swansea University has been researching the development of formal methods for use in real world situations in particular for the development of train control systems. The majority of this work has been in the form of an industrial collaboration with our partner Siemens Rail Automation (UK). Siemens are continuously modernising and improving their development processes and as a part of this are looking to use formal methods for the development of their systems. The Westrace interlocking is one such system that is being considered for treatment by formal methods. These interlockings have the benefits of being large but relatively un-complex and every interlocking developed has to comply to the same range of safety requirements.  We have developed a Another product currently under development by Siemens Rail Automation is the European Rail Traffic Management System. This developed to a European  standard with each country or individual company producing their own implementation. Since the specification is loose and allows for a wide range for implementations this makes modelling of the system desirable to understand possible behaviours and to ensure safe integration with existing infrastructure. Furthermore, it is an open field  when it comes to substantiating the claim that the ERTMS approach offers a higher performance of the railway compared to the traditional control systems.
 
 
 
@@ -33,10 +33,10 @@ The Railway Verification Group at the Computer Science Department of Swansea Uni
 \section{Results of the Thesis}
 
 
-The main result of this thesis is the use of program extraction to obtain a verified DPLL SAT solving algorithm that can solve industrial sized problems in the form of verifying solid state interlockings following the approach set out in \cite{AL14a}. We have named the resulting SAT solver XSAT and show that its performance is comparable with other verified SAT algorithms. This case study opens up a new area of application for program extraction to obtain verified decision procedures and has been published in \cite{AL14b}. This is the biggest case study so far in the area of program extraction and demonstrates that it can be used for practical purposes.  One of the biggest arguements against the use of program extraction is that one loses control over the efficiency of the program. We have demonstrated that it is possible to carry out efficiency considerations at the proof level and therefore obtain a more efficient extracted program. We demonstrate that it is possible to modify the SAT proof system and extract a more advanced SAT algorithm that implements an optimisation called clause learning. We also demonstrate that it is possible to extract a resolution algorithm based on our original DPLL SAT solver.
+The main result of this thesis is the use of program extraction to obtain a verified DPLL SAT solving algorithm that can solve industrial sized problems in the form of verifying solid state interlockings following the approach set out in \cite{AL14a}. We have named the resulting SAT solver XSAT and show that its performance is comparable with other verified SAT algorithms. This case study opens up a new area of application for program extraction to obtain verified decision procedures and has been published in \cite{AL14b}. This is the biggest case study so far in the area of program extraction and demonstrates that it can be used for practical purposes.  One of the biggest arguments against the use of program extraction is that one loses control over the efficiency of the program. We have demonstrated that it is possible to carry out efficiency considerations at the proof level and therefore obtain a more efficient extracted program. We demonstrate that it is possible to modify the SAT proof system and extract a more advanced SAT algorithm that implements an optimisation called clause learning. We also demonstrate that it is possible to extract a resolution algorithm based on our original DPLL SAT solver.
 
 
-The second result of this thesis is the modelling of the European Rail Traffic Management System and verification of its safety and performance using Real Time Maude. First, we formalised the ERTMS system, controlling an example railway in the form of a pentagon, as several hybrid automata in order to capture its behaviour.  This pentagon example along with a small junction were then modelled as Real Time Maude specifications. In our model, speed, acceleration, braking behaviour and tracklength are integral parts, as even safety cannot be decided without these properties. The inclusion of these properties in the model enables the performance of this system to be analysed by executing the Real Time Maude specifications. This is also the first formalisation of ERTMS to capture the interlocking, radio block processor, train and the communications between them. The interface between the interlocking and the radio block processor, in particular, has yet to be examined in detail even though it plays a crucial role in the safety of the overal system.
+The second result of this thesis is the modelling of the European Rail Traffic Management System and verification of its safety and performance using Real Time Maude. First, we formalised the ERTMS system, controlling an example railway in the form of a pentagon, as several hybrid automata in order to capture its behaviour.  This pentagon example along with a small junction were then modelled as Real Time Maude specifications. In our model, speed, acceleration, braking behaviour and track length are integral parts, as even safety cannot be decided without these properties. The inclusion of these properties in the model enables the performance of this system to be analysed by executing the Real Time Maude specifications. This is also the first formalisation of ERTMS to capture the interlocking, radio block processor, train and the communications between them. The interface between the interlocking and the radio block processor, in particular, has yet to be examined in detail even though it plays a crucial role in the safety of the overall system.
 
 
 
@@ -54,7 +54,7 @@ The second result of this thesis is the modelling of the European Rail Traffic M
 \medskip \\
 \textbf{Chapter 6}: Provides a general introduction to the traditional railway domain.
 \medskip \\
-\textbf{Chapter 7}: Provides an overview of the model checking techiques used in this thesis for verification. \medskip \\
+\textbf{Chapter 7}: Provides an overview of the model checking techniques used in this thesis for verification. \medskip \\
 \textbf{Chapter 8}: Compares XSAT with another verified SAT algorithm and an industrial tool on pigeon hole formulae and on the real world application of verifying a solid state railway interlocking.
 \medskip \\
 \textbf{Chapter 9}: Provides a description of the European Rail Traffic Management System
